# CerebroVial

./: .gitignore  AGENTS.md  README.md  initialFile.py  pyproject.toml  requirements.txt
conf/: config.yaml  config_models.py
conf/vision/: balanced.yaml  default.yaml  javier_prado.yaml  low_latency.yaml  vehicle_classes.yaml
configs/: default_config.yaml
dataaa/: Traffic.csv  test_data.csv
dataaa/output/: vehicle_counts_timeseries.csv
docs/specs/: multimodal_data_architecture.md
memory-bank/: progress.md  systemPatterns.md
modelsold/: traffic_prediction_model.h5  traffic_scaler.pkl
notebooks/: RedesNeuronalesAritificiales_PROYECTO.ipynb  yolov8_vehicle_detection.ipynb
scripts/: generate_camera_data.py  generate_waze_data.py  run_server.py  run_vision.py  test_stream.py  test_youtube.py
src/: fromUrl.py  main.py  routes.py  vehicle_counter.py  vehicle_counter_timeseries.py  web_streamer.py
src/common/: exceptions.py  logging.py  metrics.py  utils.py
src/common/config/: manager.py
src/components/: object_detector.py  object_tracker.py
src/control/: domain.py
src/logic/: speed_calculator.py  vehicle_counter.py
src/prediction/: domain.py
src/templates/: index.html
src/utils/: config_loader.py  data_persistency.py  logger.py  temp.py  visualizer.py
src/vision/: domain.py
srcold/: main.py
srcold/components/: object_detector.py
srcold/logic/: vehicle_counter.py
tests/: conftest.py  run_tests.py  test_timeseries_tracker.py
tests/unit/: test_domain.py
tests/vision/: test_yolo_detector.py
testsold/: test_vehicle_counter.py
(+67 files in other folders)
