[project]
name = "cerebrovial"
version = "0.1.0"
description = ""
authors = [
    {name = "rasec1106",email = "elch.herrera@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pandera (>=0.27.0,<0.28.0)"
]
